[project]
name = "jobhunter-server"
version = "0.1.0"
description = "Backend-first FastAPI service for JobHunter"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "httpx2>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
